# oneline_str_enum

./: Cargo.toml
src/: lib.rs
