[package]
name = "oneline_str_enum"
version = "0.1.1"
edition = "2021"
description = "Format and parse enums as strings with macros."
license = "MIT"
repository = "https://github.com/willemml/oneline_str_enum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_string_lexer = "0.1.0"